syntax = "proto3";

package phalanx_index;

option go_package = "pkg/proto";

service IndexService {
    rpc Readiness (ReadinessReq) returns (ReadinessReply) {}
    rpc Get(GetReq) returns (GetReply) {}
    rpc Set(SetReq) returns (SetReply) {}
    rpc Delete(DeleteReq) returns (DeleteReply) {}
    rpc BulkSet (BulkSetReq) returns (BulkSetReply) {}
    rpc BulkDelete (BulkDeleteReq) returns (BulkDeleteReply) {}
    rpc Commit (CommitReq) returns (CommitReply) {}
    rpc Rollback (RollbackReq) returns (RollbackReply) {}
    rpc Merge (MergeReq) returns (MergeReply) {}
    rpc Push (PushReq) returns (PushReply) {}
    rpc Pull (PullReq) returns (PullReply) {}
    rpc Schema (SchemaReq) returns (SchemaReply) {}
    rpc Search (SearchReq) returns (SearchReply) {}
}

enum State {
    READY = 0;
    NOT_READY = 1;
}

message ReadinessReq {}

message ReadinessReply {
    State state = 1;
}

message GetReq {
    string id = 1;
}

message GetReply {
    string doc = 1;
}

message SetReq {
    string doc = 1;
}

message SetReply {}

message DeleteReq {
    string id = 1;
}

message DeleteReply {}

message BulkSetReq {
    repeated SetReq requests = 1;
}

message BulkSetReply {}

message BulkDeleteReq {
    repeated DeleteReq requests = 1;
}

message BulkDeleteReply {}

message CommitReq {}

message CommitReply {}

message RollbackReq {}

message RollbackReply {}

message MergeReq {}

message MergeReply {}

message PushReq {}

message PushReply {}

message PullReq {}

message PullReply {}

message SchemaReq {}

message SchemaReply {
    string schema = 1;
}

message SearchReq {
    string query = 1;
    uint64 from = 2;
    uint64 limit = 3;
    bool exclude_count = 4;
    bool exclude_docs = 5;
    string facet_field = 6;
    repeated string facet_prefixes = 7;
}

message SearchReply {
    string result = 1;
}
